build.gradle에 JVM 플래그 추가